<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.jptaylor03</groupId>
  <artifactId>tsumRecordReport</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Tsum (Hearts) Record Report</name>
  <description>A tool to help visualize which Tsum friends have sent you hearts.</description>
  
  <properties>
	<main.class>thr.controller.Main</main.class>
	<maven.compiler.source>1.7</maven.compiler.source>
	<maven.compiler.target>1.7</maven.compiler.target>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
<!--<dependency>
	    <groupId>com.aspose</groupId>
	    <artifactId>aspose-ocr</artifactId>
	    <version>25.10.0</version>
	</dependency>-->
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-core</artifactId>
	    <version>2.20.1</version>
	</dependency>
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>2.20.1</version>
	</dependency>
	<dependency>
	    <groupId>net.sourceforge.tess4j</groupId>
	    <artifactId>tess4j</artifactId>
	    <version>5.16.0</version>
	</dependency>
	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-core</artifactId>
	    <version>2.25.2</version>
	</dependency>
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi</artifactId>
	    <version>5.5.0</version>
	</dependency>
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi-ooxml</artifactId>
	    <version>5.5.0</version>
	</dependency>
  </dependencies>

  <build>
	<plugins>
		<!-- Jar w/ dependencies -->
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-assembly-plugin</artifactId>
			<configuration>
				<appendAssemblyId>false</appendAssemblyId>
				<descriptorRefs>
					<descriptorRef>jar-with-dependencies</descriptorRef>
				</descriptorRefs>
				<archive>
					<manifest>
						<mainClass>${main.class}</mainClass>
						<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
					</manifest>
					<manifestEntries>
						<Add-Opens>java.base/java.lang</Add-Opens>
					</manifestEntries>
				</archive>
			</configuration>
			<executions>
				<execution>
					<id>make-assembly</id>
					<phase>package</phase>
					<goals>
						<goal>single</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-resources-plugin</artifactId>
			<configuration>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
						<filtering>true</filtering>
						<includes>
							<include>**/*.properties</include>
							<include>**/*.txt</include>
							<include>**/*.xml</include>
						</includes>
					</resource>
				</resources>
			</configuration>
		</plugin>
	</plugins>
  </build>

  <repositories>
    <repository>
        <id>central</id>
        <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
<!--<repository>
        <id>aspose</id>
        <name>Aspose Repository</name>
        <url>https://releases.aspose.com/java/repo/</url>
    </repository>-->
  </repositories>
</project>